<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/pureWhite"
              android:orientation="vertical"
              android:padding="10dp">

    <RelativeLayout
        android:id="@+id/top_panel_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_payment_hint"
            style="@style/VendingTheme.VendingMachineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/machine_hint_insert_coin"
            android:textAlignment="center"
            android:textSize="30sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/transparentBlack"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/item_slide_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:padding="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/transparentBlack"/>

    <LinearLayout
        android:id="@+id/sub_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            tools:ignore="NestedWeights">

            <FrameLayout
                android:id="@+id/item_summary_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_pay"
                style="@style/VendingTheme.VendingMachineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/item_summary_container"
                android:backgroundTint="@color/azureBlue"
                android:paddingTop="5dp"
                android:text="@string/btn_dialog_pay"
                android:textColor="@color/pureWhite"
                android:textSize="18sp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btn_use_credit"
                style="@style/VendingTheme.VendingMachineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/btn_pay"
                android:paddingTop="5dp"
                android:text="@string/btn_use_credit"
                android:textColor="@color/pureWhite"
                android:textSize="18sp"
                android:visibility="invisible"/>
        </RelativeLayout>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/transparentBlack"/>

        <RelativeLayout
            android:id="@+id/sub_right_panel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif"
                tools:ignore="RelativeOverlap"/>

            <Button
                android:id="@+id/btn_cash_out"
                style="@style/VendingTheme.VendingMachineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/text_credit"
                android:paddingTop="5dp"
                android:text="@string/btn_cash_out"
                android:textColor="@color/pureWhite"
                android:textSize="18sp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>